@startuml Entity

package @nestjs/mongoose {
  class "function Schema() : PropertyDecorator" as Schema
  class "function Prop() : PropertyDecorator" as Prop
}

package mongoose {
  class Document
}

package film.entity {
  class "type FilmDocument = Fil & Document<>" as FilmDocument
  hide FilmDocument circle

  FilmDocument ..> Film
  FilmDocument .right.> Document

  class Film

  Film .right.> Schema
  Film .right.> Prop

  Film ..> Genre
  Film ..> Studio

  enum Genre {
    COMEDY
    ACTION
    ROMANCE
  }

  enum Studio {
    DISNEY
    WARNER
    UNIVERSAL
  }

  class Film <<entity>> <<@Schema>> {
    + @Prop titel: string
    + @Prop rating?: number
    + @Prop genre?: FilmGenre
    + @Prop studio: Studio
    + @Prop online?: boolean
    + @Prop datum?: Date
    + @Prop homepage?: string
    + @Prop schlagwoerter?: string[]
  }
}

hide empty members

@enduml
